--- a/SpringBootMVCDemo/pom.xml
+++ b/SpringBootMVCDemo/pom.xml
@@ -38,6 +38,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-jasper -->
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-jasper</artifactId>
+			<version>8.5.72</version>
+		</dependency>
 	</dependencies>
 
 	<build>
