--- a/SpringBootMVCDemo/pom.xml
+++ b/SpringBootMVCDemo/pom.xml
@@ -44,6 +44,18 @@
 			<artifactId>tomcat-jasper</artifactId>
 			<version>9.0.54</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
+		
+
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>4.1.0</version>
+			<scope>test</scope>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
