Commit 13:Added dependencies and Log4j properties.

--- a/SpringBootMVCDemo/pom.xml
+++ b/SpringBootMVCDemo/pom.xml
@@ -38,6 +38,13 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-jasper -->
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
@@ -45,7 +52,7 @@
 			<version>9.0.54</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
-		
+
 
 		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
 		<dependency>
@@ -54,6 +61,7 @@
 			<version>4.1.0</version>
 			<scope>test</scope>
 		</dependency>
+
 
 
 	</dependencies>
